--- a/SX.WebAdmin/Views/Valutes/_GridView.cshtml
+++ b/SX.WebAdmin/Views/Valutes/_GridView.cshtml
@@ -1,9 +1,6 @@
 ﻿@model SxVMValute[]
 @{
     Layout = null;
-    var pagerInfo = ViewBag.PagerInfo;
-    var filter = ViewBag.Filter != null ? (SxVMValute)ViewBag.Filter : null;
-    var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
 }
 
 
@@ -14,6 +11,5 @@
         new SxExtantions.SxGvColumn<SxVMValute> { FieldName="Value", Caption="Значение, руб."},
     },
     RowCssClass = (x) => { return Equals(x.CharCode, "USD") || Equals(x.CharCode, "EUR") ? "success" : null; },
-    EnableEditing=true,
-    EditRowUrl=(x)=>"xxx"
+    DataAjaxUrl="/valutes"
 })
