--- a/SX.WebAdmin/less/site.less
+++ b/SX.WebAdmin/less/site.less
@@ -1,4 +1,4 @@
-﻿@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic&subset=latin,cyrillic);
+﻿@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic);
 
 @import (reference) "../bower_components/bootstrap/less/variables";
 @import (reference) "colors.less";
@@ -9,9 +9,9 @@ a, a:link, a:active, a:visited, a:focus, button, button:link, button:visited, bu
 }
 
 body{
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'PT Sans Narrow', sans-serif;
     color:@color-black;
-    font-size:12px;
+    font-size:13px;
 }
 
 .navbar-top-links a{
