--- a/SX.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/SX.WebAdmin/Views/Shared/_Layout.cshtml
@@ -387,10 +387,10 @@
                         @if (User.IsInRole("seo"))
                         {
                             <li>
-                                <a href="#"><i class="fa fa-cog fa-fw"></i> Seo оптимизация<span class="fa arrow"></span></a>
+                                <a href="#"><i class="fa fa-cog fa-fw"></i> SEO оптимизация<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="#"><i class="fa fa-cogs"></i> Метатеги</a>
+                                        <a href="/seotags"><i class="fa fa-cogs"></i> SEO теги</a>
                                     </li>
                                     <li>
                                         <a href="#"><i class="fa fa-arrow-right"></i> 301 редирект</a>
@@ -402,7 +402,7 @@
                                         <a href="#"><i class="fa fa-compress"></i> Счетчик слов</a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="fa fa-ban"></i> Забаненные адреса</a>
+                                        <a href="/bannedurls"><i class="fa fa-ban"></i> Забаненные адреса</a>
                                     </li>
                                 </ul>
                             </li>
@@ -413,10 +413,10 @@
                                 <a href="#"><i class="fa fa-cube fa-fw"></i> Монетизация<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="#"> Список баннеров</a>
+                                        <a href="/banners"> Список баннеров</a>
                                     </li>
                                     <li>
-                                        <a href="#"> Группы баннеров</a>
+                                        <a href="/bannergroups"> Группы баннеров</a>
                                     </li>
                                 </ul>
                             </li>
