--- a/SX.WebAdmin/less/site.less
+++ b/SX.WebAdmin/less/site.less
@@ -4,7 +4,7 @@
 @import (reference) "colors.less";
 @import "sb-admin-2.less";
 
-a, a:link, a:active, a:visited, a:focus, button, button:link, button:visited, button:active, button:focus{
+a, a:link, a:active, a:visited, a:focus, button, button:link, button:visited, button:active, button:focus, input:focus{
     outline:none !important;
 }
 
