--- a/SX.WebAdmin/less/sx-gv.less
+++ b/SX.WebAdmin/less/sx-gv.less
@@ -6,26 +6,31 @@
     color: inherit;
 }
 
+.sx-gv table {
+    margin-bottom: 0;
+}
+
 .sx-gv .tooltip {
     font-size: 11px;
 }
 
-.sx-gv thead th{
-    user-select:none;
-    font-weight:300;
+.sx-gv thead th {
+    user-select: none;
+    font-weight: 300;
 }
 
-.sx-gv thead th:active:not(.sx-gv_first-column){
-    background-color:@color-gray;
+.sx-gv thead th:active:not(.sx-gv_first-column) {
+    background-color: @color-gray;
 }
 
-.sx-gv .sx-gv__sort-arow{
-    float:right;
-    margin-top:2px;
+.sx-gv .sx-gv__sort-arow {
+    float: right;
+    margin-top: 2px;
 }
 
 .sx-gv .sx-gv__filter-row td {
     vertical-align: middle;
+    text-align: center;
 }
 
 .sx-gv .sx-gv__filter-row input {
@@ -40,31 +45,38 @@
 
 .sx-gv .sx-gv__row > td:first-child {
     vertical-align: middle;
+    text-align: center;
 }
 
 .sx-gv .sx-gv__pager {
     margin-bottom: 0;
-    margin-left:0;
+    margin-left: 0;
 }
 
 .sx-gv .sx-gv__pager > li {
     border: 1px solid @color-gray;
     margin-right: 2px;
-    padding:0;
+    padding: 0;
 }
 
 .sx-gv .sx-gv__pager > li.active {
-    font-weight:bold;
-    background-color:@color-orange;
-    border:1px solid @color-white;
-    color:@color-white;
+    font-weight: bold;
+    background-color: @color-orange;
+    border: 1px solid @color-white;
+    color: @color-white;
 }
 
 .sx-gv .sx-gv__pager > li > a {
     display: block;
     text-decoration: none;
     padding: 0 8px;
-    font-size:.9em;
+    font-size: .9em;
 }
 
+.sx-gv tfoot td {
+    vertical-align:middle !important;
+}
 
+.sx-gv .sx-gv__add-from-chbx-btn{
+    //display:none;
+}
