--- a/SX.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/SX.WebAdmin/Views/Shared/_Layout.cshtml
@@ -393,13 +393,13 @@
                                         <a href="/seotags"><i class="fa fa-cogs"></i> SEO теги</a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="fa fa-arrow-right"></i> 301 редирект</a>
+                                        <a href="/redirects"><i class="fa fa-arrow-right"></i> 301 редирект</a>
                                     </li>
                                     <li>
                                         <a href="/seo/editrobotsfile"><i class="fa fa-ship"></i> robot.txt</a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="fa fa-compress"></i> Счетчик слов</a>
+                                        <a href="/seowordcounter"><i class="fa fa-compress"></i> Счетчик слов</a>
                                     </li>
                                     <li>
                                         <a href="/bannedurls"><i class="fa fa-ban"></i> Забаненные адреса</a>
@@ -463,7 +463,7 @@
                             <a href="#"><i class="fa fa-tasks fa-fw"></i> FAQ<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#">Справка</a>
+                                    <a href="/faq">Справка</a>
                                 </li>
                                 @if (User.IsInRole("architect"))
                                 {
