--- a/SX.WebAdmin/Views/SiteTestBlocks/Edit.cshtml
+++ b/SX.WebAdmin/Views/SiteTestBlocks/Edit.cshtml
@@ -19,7 +19,7 @@
     </div>
 }
 
-<form method="post" action="edit">
+<form method="post" action="edit" autocomplete="off">
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.Id)
 
@@ -27,7 +27,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 @Html.LabelFor(x => x.Title, new { @class = "control-label" })
-                @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control", @placeholder="Введите название группы" } })
+                @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите название группы" } })
                 @Html.ValidationMessageFor(x => x.Title)
             </div>
         </div>
@@ -48,6 +48,12 @@
 
     <div class="form-group">
         <button type="submit" class="btn btn-primary">@(Model.Id == 0 ? "Добавить" : "Сохранить")</button>
-        @Html.RouteLink("Назад", new { action = "Index", controller= "sitetestblocks" }, new { @class = "btn btn-default" })
+        @Html.RouteLink("Назад", new { action = "Index", controller = "sitetestblocks" }, new { @class = "btn btn-default" })
     </div>
 </form>
+
+@section scripts{
+    <script>
+        $('#TestId').sx_gvl();
+    </script>
+}
