--- a/SX.WebAdmin/less/sx-gvl.less
+++ b/SX.WebAdmin/less/sx-gvl.less
@@ -1,17 +1,19 @@
 ﻿@import (reference) "colors.less";
 
-.sx-gvl{
-    position:relative;
+.sx-gvl {
+    position: relative;
 }
 
 .sx-gvl__dropdown {
-    position:absolute;
-    width:100%;
-    background-color:@color-white;
+    position: absolute;
+    width: 100%;
+    background-color: @color-white;
 }
 
-.sx-gvl__bottom-panel{
-    padding:5px 10px;
-    border:1px solid @color-gray;
-    display:none;
+.sx-gvl[data-is-single-mode="true"] .sx-gv tbody tr:not(.sx-gv__filter-row) {
+    cursor: pointer;
+}
+
+.sx-gvl[data-is-single-mode="true"] .sx-gv tbody tr:not(.sx-gv__filter-row):hover > td {
+    background-color:@color-gray !important;
 }
